--- a/WebSite/Views/Account/SignIn.cshtml
+++ b/WebSite/Views/Account/SignIn.cshtml
@@ -5,50 +5,47 @@
 }
 @model WebSite.Models.SignInModel
 
-<div class="container">
-    <h2>Sign in</h2>
-    <br/>
+<div class="account-form">
+  <div class="welcome-tew">
+    <div class="welcome-tew-link">
+      @Html.ActionLink("Регистрация", "SignUp", new { }, new { @class = "account-form-link" })
+    </div>
+    <div class="welcome-tew-title">TEW!</div>
+  </div>
 
-	@using (Html.BeginForm())
-	{
-		@Html.ValidationSummary(true)
+  @using (Html.BeginForm())
+  {
+    @Html.ValidationSummary(true)
 
-		<div>
-			<fieldset>
-				<div class="editor-label">
-					@Html.LabelFor(m => m.Email)
-				</div>
-				<div class="editor-field">
-					@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-					@Html.ValidationMessageFor(m => m.Email)
-				</div>
-        <br/>
+    <div>
+      <fieldset class="account-form-fieldset">
+        <div class="editor-label">
+          @Html.LabelFor(m => m.Email)
+        </div>
+        <div class="editor-field">
+          @Html.ValidationMessageFor(m => m.Email)
+          @Html.TextBoxFor(m => m.Email, new { @class = "account-form-input" })
+        </div>
 
-				<div class="editor-label">
-					@Html.LabelFor(m => m.Password)
-				</div>
-				
-				<div class="editor-field">
-					@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-					@Html.ValidationMessageFor(m => m.Password)
-				</div>
-        <br />
+        <div class="editor-label">
+          @Html.LabelFor(m => m.Password)
+        </div>
 
-				<div class="editor-label">
+        <div class="editor-field">
+          @Html.ValidationMessageFor(m => m.Password)
+          @Html.PasswordFor(m => m.Password, new { @class = "account-form-input" })
+        </div>
+
+
+        <div class="account-checkbox">
           @Html.CheckBoxFor(m => m.StayInLogin)
-					@Html.LabelFor(m => m.StayInLogin)
-				</div>
-        <br />
+          @Html.LabelFor(m => m.StayInLogin)
+        </div>
 
-				<input class="btn btn-success" type="submit" value="Sign In" />
-				@Html.ActionLink("Sign up", "SignUp", new { }, new {@class="btn btn-primary" })
-			</fieldset>
-		</div>
-	}
+        <div class="account-form-button-section">
+          <input class="account-form-button" type="submit" value="Вход" />
+        </div>
+      </fieldset>
+    </div>
+  }
 </div>
-
-
-<!-- redirect to new domen -->
-@*<script type="text/javascript">
-    $(document).ready(function () { window.location.href = 'http://tew2.azurewebsites.net' });
-</script>*@
