--- a/WebSite/Views/Shared/_TewLayout.cshtml
+++ b/WebSite/Views/Shared/_TewLayout.cshtml
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <title>Tew</title>
 
-        @Styles.Render("~/Content/tewLayout")
+        @Styles.Render("~/Content/css")
         @Styles.Render("~/Content/awesome")
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
