--- a/WebSite/StaticContent/app/templates/helpComponents/loadingAnimation.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/loadingAnimation.html
@@ -1,3 +1,3 @@
-﻿<div class="center-block">
-    <i class="fa fa-hourglass-o fa-spin" aria-hidden="true"></i>
+﻿<div class="loading-spinner">
+    <i class="fa fa-hourglass-o fa-spin loading-spinner-icon" aria-hidden="true"></i>
 </div>
