Update user info page

--- a/WebSite/StaticContent/app/templates/components/irregularVerbs.html
+++ b/WebSite/StaticContent/app/templates/components/irregularVerbs.html
@@ -1,6 +1,6 @@
 <div>
     <table class="tew-table tew-table-striped">
-        <thead class="header">
+        <thead>
             <tr>
                 <th>Infinitive</th>
                 <th>Past Simple</th>
