Show words count on user-stat screen

--- a/WebSite/StaticContent/app/templates/components/userStat.html
+++ b/WebSite/StaticContent/app/templates/components/userStat.html
@@ -11,6 +11,14 @@
             </div>
             <div class="user-stat-block">
                 <span class="user-stat-label">
+                    Words count:
+                </span>
+                <span class="user-stat-value user-stat-label">
+                    {{userStatModel.WordsCount}}
+                </span>
+            </div>
+            <div class="user-stat-block">
+                <span class="user-stat-label">
                     Words level:
                 </span>
                 <span class="user-stat-value user-stat-label">
